--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
 
     <!-- 네비게이션 -->
     <nav>
-        <a href="/home.html" class="active" target="_self">홈</a>
-        <a href="/useAi.html">AI 활용</a>
-        <a href="/language.html">언어요약</a>
-        <a href="/timetable.html">시간표</a>
-        <a href="/bookmark.html">북마크</a>
+        <a href="index.html" class="active" target="_self">홈</a>
+        <a href="useAi.html">AI 활용</a>
+        <a href="language.html">언어요약</a>
+        <a href="timetable.html">시간표</a>
+        <a href="bookmark.html">북마크</a>
     </nav>
 
     <!-- 메인 컨텐츠 -->
@@ -226,10 +226,10 @@
             <!-- 배경 코드 -->
             <div class="code-background">
                 <div class="code-line"><span class="keyword">const</span> student = {</div>
-                <div class="code-line">  name: <span class="string">"홍길동"</span>,</div>
-                <div class="code-line">  id: <span class="string">"2025-123456"</span>,</div>
+                <div class="code-line">  name: <span class="string">"정주호"</span>,</div>
+                <div class="code-line">  id: <span class="string">"225230001"</span>,</div>
                 <div class="code-line">  department: <span class="string">"컴퓨터공학과"</span>,</div>
-                <div class="code-line">  university: <span class="string">"OO대학교"</span>,</div>
+                <div class="code-line">  university: <span class="string">"동국대학교 듀이카"</span>,</div>
                 <div class="code-line">  year: <span class="string">2025</span>,</div>
                 <div class="code-line">  status: <span class="string">"active"</span></div>
                 <div class="code-line">};</div>
