--- a/useAi.html
+++ b/useAi.html
@@ -12,11 +12,11 @@
 
     <!-- 네비게이션 -->
     <nav>
-        <a href="/home.html" class="active" target="_self">홈</a>
-        <a href="/useAi.html">AI 활용</a>
-        <a href="/language.html">언어요약</a>
-        <a href="/timetable.html">시간표</a>
-        <a href="/bookmark.html">북마크</a>
+        <a href="index.html" class="active" target="_self">홈</a>
+        <a href="useAi.html">AI 활용</a>
+        <a href="language.html">언어요약</a>
+        <a href="timetable.html">시간표</a>
+        <a href="bookmark.html">북마크</a>
     </nav>
 </body>
 </html>
