--- a/language.html
+++ b/language.html
@@ -15,10 +15,17 @@
     <!-- 네비게이션 -->
     <nav>
         <a href="index.html" class="active" target="_self">홈</a>
-        <a href="useai.html">AI 활용</a>
+        <a href="bookmark.html">듀이카 북마크</a>
         <a href="language.html">언어요약</a>
         <a href="timetable.html">시간표</a>
-        <a href="bookmark.html">북마크</a>
+        <a href="empty.html">임시</a>
+    </nav>
+    <nav >
+        <a href="#" class="active" target="_self">C</a>
+        <a href="#">CPP</a>
+        <a href="#">HTML</a>
+        <a href="#">JAVA</a>
+        <a href="#">ANDROID</a>
     </nav>
 <script src="js/navigation.js"></script> 
 </body>
