--- a/bookmark.html
+++ b/bookmark.html
@@ -35,7 +35,7 @@
     <!-- 네비게이션 -->
     <nav>
         <a href="index.html" class="active" target="_self">홈</a>
-        <a href="bookmark.html">듀이카 북마크</a>
+        <a href="bookmark.html">북마크</a>
         <a href="language.html">언어요약</a>
         <a href="timetable.html">시간표</a>
         <a href="empty.html">임시</a>
@@ -44,11 +44,11 @@
     <div class="iframe-wrapper">
         <iframe src="leftframe.html"
             name="left">
-            left iframe
+            
         </iframe>
     <iframe src="rightframe.html"
             name="right">
-            right iframe
+            
     </iframe>
     </div>
 <script src="js/navigation.js"></script> 
