--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     <!-- 네비게이션 -->
     <nav>
         <a href="index.html" class="active" target="_self">홈</a>
-        <a href="bookmark.html">듀이카 북마크</a>
+        <a href="bookmark.html">북마크</a>
         <a href="language.html">언어요약</a>
         <a href="timetable.html">시간표</a>
         <a href="empty.html">임시</a>
