--- a/index.html
+++ b/index.html
@@ -165,17 +165,22 @@
 </head>
 <body>
     <!-- 헤더 -->
-    <header>
+    <header id="header">
         <h1>DUICA A3</h1> <img src="img/donggukMark.png" alt="동국대 마크">
-        <!--로그인 로그아웃 회원가입 place 구현-->
+        <input class="iText" type="text" name="user_id" placeholder="아이디">
+        <input class="iText" type="password" name="password" placeholder="암호">
+        <button type="submit">로그인</button>
+        <span class="hLine">
+            <a class="a" href="#">회원가입</a>
+        </span>
     </header>
     <!-- 네비게이션 -->
     <nav>
         <a href="index.html" class="active" target="_self">홈</a>
+        <a href="attendance.html">출석체크</a>
         <a href="bookmark.html">북마크</a>
         <a href="language.html">언어요약</a>
         <a href="timetable.html">시간표</a>
-        <a href="empty.html">임시</a>
     </nav>
     <!-- 메인 컨텐츠 -->
     <main>
