layout 수정 및 singupform 완성

--- a/leftframe.html
+++ b/leftframe.html
@@ -35,6 +35,7 @@
     <button class="bookmark-button" data-url="http://www.ducsi.ac.kr/Ducsi/ducsi_new/subject/curriculum.jsp?flag=comp">🐈 컴퓨터공학과 강의계획서</button>
     <button class="bookmark-button" data-url="http://www.ducsi.ac.kr/Ducsi/ducsi_new/student/info_form_list.jsp">♊ 듀이카 양식함</button>
     <button class="bookmark-button" data-url="https://www.cb.or.kr/creditbank/base/nMain.do">♊ 학점은행제 홈페이지</button>
+    <button class="bookmark-button" data-url="https://www.gunsys.com/gunsystem_pilgi.htm">♊ 건시스템 CBT 필기</button>
     <button class="bookmark-button" data-url="https://solved.ac/">♊ 알고리즘 문제풀기</button>
     <button class="bookmark-button" data-url="https://rgbcolorpicker.com/">♊ RGB값 구하기</button>
     <button class="bookmark-button" data-url="https://dict.naver.com/">♊ 네이버 사전</button>
