--- a/index.html
+++ b/index.html
@@ -6,165 +6,16 @@
     <title>R1-A3-225230001-정주호</title>
     <link rel="icon" href="img/favicon.ico">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/cardstyle.css">
     <style>
         /* 메인 컨텐츠 */
         main {
             display: flex;
             justify-content: center;
-            align-items: center;
-            min-height: calc(100vh - 140px);
-            padding: 40px;
+            align-items: flex-start;
+            padding: 50px 0;
             position: relative;
             overflow: hidden;
-        }
-        /* 카드 래퍼 */
-        .card-wrapper {
-            position: relative;
-            width: 705px;
-            height: 442px;
-        }
-        /* 배경 코드 레이어 */
-        .code-background {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            background: #0a0a0a;
-            border-radius: 20px;
-            box-sizing: border-box;
-            padding: 20px;
-            font-family: 'Courier New', monospace;
-            font-size: 15px;
-            line-height: 1.6;
-            color: #4ade80;
-            overflow: hidden;
-        }
-        .code-line {
-            opacity: 0;
-            animation: codeFadeInOut 18s infinite;
-        }
-        /* 더 무작위적이고 다양한 딜레이 */
-        .code-line:nth-child(1) { animation-delay: 0.8s; }
-        .code-line:nth-child(2) { animation-delay: 2.7s; }
-        .code-line:nth-child(3) { animation-delay: 1.3s; }
-        .code-line:nth-child(4) { animation-delay: 3.5s; }
-        .code-line:nth-child(5) { animation-delay: 0.5s; }
-        .code-line:nth-child(6) { animation-delay: 2.1s; }
-        .code-line:nth-child(7) { animation-delay: 1.8s; }
-        .code-line:nth-child(8) { animation-delay: 3.2s; }
-        .code-line:nth-child(9) { animation-delay: 0.3s; }
-        .code-line:nth-child(10) { animation-delay: 2.9s; }
-        .code-line:nth-child(11) { animation-delay: 1.5s; }
-        .code-line:nth-child(12) { animation-delay: 3.8s; }
-        .code-line:nth-child(13) { animation-delay: 0.9s; }
-        .code-line:nth-child(14) { animation-delay: 2.4s; }
-        .code-line:nth-child(15) { animation-delay: 1.1s; }
-        .code-line:nth-child(16) { animation-delay: 3.6s; }
-        .code-line:nth-child(17) { animation-delay: 0.6s; }
-        .code-line:nth-child(18) { animation-delay: 2.3s; }
-        @keyframes codeFadeInOut {
-            0%, 15% {
-                opacity: 0;
-            }
-            25%, 70% {
-                opacity: 0.75;
-            }
-            85%, 100% {
-                opacity: 0;
-            }
-        }
-        .keyword { color: #c084fc; }
-        .string { color: #fbbf24; }
-        .comment { color: #6b7280; }
-        /* 카드 컨테이너 */
-        .card-container {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            transform-style: preserve-3d;
-            perspective: 1000px;
-        }
-        /* 카드 */
-        .card {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            border-radius: 16px;
-            background: none;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
-            padding: 0;
-            display: block;
-            flex-direction: column;
-            justify-content: space-between;
-            clip-path: inset(0 0 0 0);
-            animation: cardScan 15s ease-in-out infinite;
-        }
-        .card-image-content {
-            width: 100%;
-            height: 100%;
-            object-fit: fill; 
-            border-radius: 16px;
-            display: block;
-        }
-        @keyframes cardScan {
-            0%, 15% {
-                clip-path: inset(0 100% 0 0);
-            }
-            35%, 50% {
-                clip-path: inset(0 0 0 0);
-            }
-            70%, 85% {
-                clip-path: inset(0 0 0 100%);
-            }
-            100% {
-                clip-path: inset(0 100% 0 0);
-            }
-        }
-        /* 스캔 라인 효과 */
-        .scan-line {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 4px;
-            height: 100%;
-            background: linear-gradient(
-                to right,
-                transparent 0%,
-                rgba(59, 130, 246, 0.1) 20%,
-                rgba(59, 130, 246, 0.3) 40%,
-                rgba(59, 130, 246, 0.5) 50%,
-                rgba(59, 130, 246, 0.3) 60%,
-                rgba(59, 130, 246, 0.1) 80%,
-                transparent 100%
-            );
-            box-shadow: 
-                0 0 30px rgba(59, 130, 246, 0.5),
-                0 0 60px rgba(59, 130, 246, 0.3);
-            animation: scanMove 15s ease-in-out infinite;
-            z-index: 10;
-        }
-        @keyframes scanMove {
-            0%, 10% {
-                left: 0;
-                opacity: 1;
-            }
-            35% {
-                left: 100%;
-                opacity: 1;
-            }
-            36%, 49% {
-                opacity: 0;
-            }
-            50% {
-                left: 0;
-                opacity: 1;
-            }
-            75% {
-                left: 100%;
-                opacity: 1;
-            }
-            76%, 100% {
-                opacity: 0;
-            }
         }
     </style>
 </head>
