attendance 구현 및 language page 틀 수정

--- a/language.html
+++ b/language.html
@@ -300,32 +300,32 @@
         </div>
         <!--cpp-->
         <div class="language-content" data-lang="cpp">
-            <h1>C++ 요약</h1>
+            <h1>C++ 요약<span class="badge">기초부터 심화까지</span></h1>
             <p>C++ 내용</p>
         </div>
         <!--HTML-->
         <div class="language-content" data-lang="html">
-            <h1>HTML 요약</h1>
+            <h1>HTML 요약<span class="badge">기초부터 심화까지</span></h1>
             <p>HTML 내용</p>
         </div>
         <!--Javascript-->
         <div class="language-content" data-lang="javascript">
-            <h1>JavaScript 요약</h1>
+            <h1>JavaScript 요약<span class="badge">기초부터 심화까지</span></h1>
             <p>JavaScript 내용</p>
         </div>
         <!--Java-->
         <div class="language-content" data-lang="java">
-            <h1>Java 요약</h1>
+            <h1>Java 요약<span class="badge">기초부터 심화까지</span></h1>
             <p>Java 내용</p>
         </div>
         <!--Android-->
         <div class="language-content" data-lang="android">
-            <h1>Android 요약</h1>
+            <h1>Android 요약<span class="badge">기초부터 심화까지</span></h1>
             <p>Android 내용</p>
         </div>
         <!--SQL-->
         <div class="language-content" data-lang="sql">
-            <h1>SQL 요약</h1>
+            <h1>SQL 요약<span class="badge">기초부터 심화까지</span></h1>
             <p>SQL 내용</p>
         </div>
     </div>
