leftFrame css 수정

--- a/leftframe.html
+++ b/leftframe.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>left iframe</title>
+    <link rel="stylesheet" href="css/style.css">
     <style>
         body {
-            color: aliceblue;
-            background-color: #121212; /* 메인 페이지의 iframe-wrapper 배경색과 일치 */
             padding: 20px;
-            font-family: Arial, sans-serif;
         }
         .bookmark-button {
-            display: block; /* 블록 요소로 만들어 너비 꽉 채우기 */
+            display: block;
             width: 100%;
             padding: 15px;
             margin-bottom: 10px;
@@ -27,6 +25,11 @@
         }
         .bookmark-button:hover {
             background-color: #555;
+        }
+        h3 {
+            color: #9ca3af;
+            font-size: 14px;
+            margin: 20px 0 10px 0;
         }
     </style>
 </head>
